--- a/index.html
+++ b/index.html
@@ -7,10 +7,16 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
 
+        <link href='http://fonts.googleapis.com/css?family=Codystar' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/main.css">
         <link rel="image_src" href="img/snapshot.jpg"/>
     </head>
     <body>
+        <div id="start">
+            <div id="top" class="line"></div>
+            <p>Start the experiment</p>
+            <div id="bottom" class="line"></div>
+        </div>
         <script src="lib/require.min.js" data-main="src/main"></script>
     </body>
 </html>
